--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
 
   <div class="jumbotron">
-    <h1>Welcome to the Bulletin Board</h1>
+	  <h1>Welcome to the Bulletin Board</h1> <br> <h3>You will get all update related new events</h3>
   </div>
 
   <div class="container" id="events">
@@ -28,8 +28,8 @@
         </div>
         <div class="panel-body">
           <div>
-            <input class="form-control" placeholder="Title" v-model="event.title">
-            <textarea class="form-control" placeholder="Detail" v-model="event.detail"></textarea>
+            <input class="form-control" placeholder="Event Name" v-model="event.title">
+            <textarea class="form-control" placeholder="Details" v-model="event.detail"></textarea>
             <input type="date" class="form-control" placeholder="Date" v-model="event.date">
             <button class="btn btn-primary" v-on:click="addEvent">Submit</button>
           </div>
